# rank-based-elections

./: README.md  best_party.csv  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml  rank_based_elections-checkpoint.ipynb  utils-checkpoint.py
Data/: next_best_party.csv
Poetry extras/tests/: test_rank_based_elections.py
Script/: rank_based_elections.ipynb  utils.py
Script/.ipynb_checkpoints/: rank_based_elections-checkpoint.ipynb
