[tool.poetry]
name = "rank-based-elections"
version = "0.1.0"
description = ""
authors = ["Abtin Salahshor <abtin.salahshor@bonniernews.se>"]

[tool.poetry.dependencies]
python = "^3.7.1"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
requests = "^2.25.1"
pandas = "^1.2.3"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
